# json-diff-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
json_diff_lite/: __init__.py  cli.py  colors.py  core.py
tests/: test_cli.py  test_colors.py  test_diff.py
