[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-diff-lite"
version = "0.3.0"
description = "A minimal, zero-dependency library for comparing JSON objects with human-readable output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niler Barcelos" }
]
keywords = ["json", "diff", "compare", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
json-diff-lite = "json_diff_lite.cli:main"

[project.urls]
Homepage = "https://github.com/nilerbarcelos/json-diff-lite"
Repository = "https://github.com/nilerbarcelos/json-diff-lite"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "pytest {args}"

[tool.pytest.ini_options]
testpaths = ["tests"]
